# TrinityCore

./: .cproject  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .gittags  .hgignore  .hgtags  .project  .travis.yml  1  2014_02_18_00_world_creature.sql  2018_08_22_03_npc_vendor_dungeonchallengemod  2018_08_28 NPC vendor season  434repos  AUTHORS  CMakeCache.txt  CMakeCache.txt.hardcoded  CMakeLists.txt  CMakeSettings.json  COMPLETE  CONTRIBUTING.md  COPYING  CRLFfix.diff  CUSTOM  ChangeLog  Changelog.txt  Creature.cpp  DATABASE_PREFIX_CHANGES.md  Dockerfile  Graph  HOW_TO_THANK_ME  INSTALL  INSTALL.linux  Jenkinsfile  Language.h  Makefile  Makefile.am  NEWS  (+67 more)
azth/src/: CMakeLists.txt
contrib/map_extractor/: CMakeLists.txt  ad
contrib/mysql_to_pgsql/: CMakeLists.txt  README
contrib/protoc-bnet/: BnetCodeGenerator.cpp  BnetCodeGenerator.h  BnetFileGenerator.cpp  BnetFileGenerator.h  BnetServiceGenerator.cpp  BnetServiceGenerator.h  CMakeLists.txt  config.h  generate_sources.bat  main.cpp  method_options.pb.cc  method_options.pb.h  service_options.pb.cc  service_options.pb.h
contrib/vmap3_extractor/: CMakeLists.txt
crates/authserver/: Cargo.toml  build.rs  cbindgen.toml  libenturion_authserver.h
crates/libmpq-rs/: Cargo.toml
crates/shared/: Cargo.toml  build.rs  cbindgen.toml  libenturion_shared.h
dep/: .CMakeLists.txt.swp  .CMakeLists_BASE_183.txt.swp  .CMakeLists_LOCAL_183.txt.swp  .CMakeLists_REMOTE_183.txt.swp  .PackageList.txt.swp  .PackageList_BASE_1857.txt.swp  .PackageList_LOCAL_1857.txt.swp  .PackageList_REMOTE_1857.txt.swp  CMakeLists.txt  CMakeLists_BACKUP_183.txt  Makefile  Makefile.am  PackageList.txt  PackageList_BACKUP_1857.txt  PackageList_REMOTE_1857.txt  cmake_install.cmake
dep/ACE_wrappers/: COPYING  ChangeLog  FAQ  Makefile.am  NEWS  PROBLEM-REPORT-FORM  README  THANKS  VERSION  aclocal.m4  configure.ac
dep/CascLib/: CMakeLists.txt  LICENSE  README.md
dep/MinHook/: AUTHORS.txt  CMakeLists.txt  LICENSE.txt
dep/PCG/: CMakeLists.txt
dep/SFMT/: CHANGE-LOG.txt  CMakeLists.txt  FILES.txt  LICENSE.txt  Makefile  Makefile.aarch64  Makefile.armv7a  README.txt  SFMT-alti.h  SFMT-common.h  SFMT-hotfix1.diff  SFMT-neon.h  SFMT-params.h  SFMT-params11213.h  SFMT-params1279.h  SFMT-params132049.h  SFMT-params216091.h  SFMT-params2281.h  SFMT-params4253.h  SFMT-params44497.h  SFMT-params607.h  SFMT-params86243.h  SFMT-sse2-msc.h  SFMT-sse2.h  SFMT.11213.out.txt  SFMT.1279.out.txt  SFMT.132049.out.txt  SFMT.19937.out.txt  SFMT.216091.out.txt  SFMT.2281.out.txt  SFMT.4253.out.txt  SFMT.44497.out.txt  SFMT.607.out.txt  SFMT.86243.out.txt  SFMT.c  SFMT.h  check.sh  randomc.h  sfmt_01_msvc_arm_support.diff  test.c
dep/StormLib/: CMakeLists.txt  StormLib-v1.0.hotfix1.diff  searchFix.patch
dep/acelite/: 6.1.4_tc_changes.diff  6.1.7_tc_changes.diff  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  NEWS  README  THANKS  VERSION  ace-v6.1.4_hotfix1.diff  ace-v6.1.4_hotfix2.diff
dep/argon2/: CMakeLists.txt
dep/boost/: .CMakeLists.txt.swp  .CMakeLists_LOCAL_1559.txt.swp  .CMakeLists_REMOTE_1559.txt.swp  CMakeLists.txt  CMakeLists_BACKUP_1559.txt  CMakeLists_LOCAL_1559.txt
dep/bzip2/: CMakeLists.txt
dep/corrosion/: .gitignore  CMakeLists.txt
dep/cotire/: HISTORY.md  MANUAL.md  README.md  license
dep/cppformat/: CMakeLists.txt  LICENSE
dep/cpr/: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  cpr-config.cmake  format-check.sh
dep/cxxopts/: CMakeLists.txt  cxxopts.h
dep/duktape/: CMakeLists.txt
dep/efsw/: .hg_archival.txt  CMakeLists.txt  LICENSE  README.md
dep/fmt/: CMakeLists.txt  README.rst
dep/g3dlite/: .Readme.txt.swp  .Readme_BASE_1580.txt.swp  .Readme_LOCAL_1580.txt.swp  .Readme_REMOTE_1580.txt.swp  BinaryOutput.cpp  CMakeLists.txt  CoordinateFrame.cpp  G3D-v10.0 hotfix1.patch  G3D-v8.0.diff  G3D-v8.0_extra.diff  G3D-v8.0_hotfix1.diff  G3D-v8.0_hotfix2.diff  G3D-v8.0_hotfix3.diff  G3D-v8.0_hotfix4.diff  G3D-v8.0_hotfix5.diff  G3D-v8.0_hotfix6.diff  G3D-v8.0_hotfix7.diff  G3D-v8.0_hotfix8.diff  G3D-v8.0_hotfix9.diff  G3D-v9.0 hotfix1.diff  G3D-v9.0 hotfix10.diff  G3D-v9.0 hotfix11.diff  G3D-v9.0 hotfix12.diff  G3D-v9.0 hotfix14.diff  G3D-v9.0 hotfix15.diff  G3D-v9.0 hotfix16.diff  G3D-v9.0 hotfix17.diff  G3D-v9.0 hotfix18.diff  G3D-v9.0 hotfix19.diff  G3D-v9.0 hotfix2.diff  G3D-v9.0 hotfix20.diff  G3D-v9.0 hotfix21.diff  G3D-v9.0 hotfix3.diff  G3D-v9.0 hotfix4.diff  G3D-v9.0 hotfix5.diff  G3D-v9.0 hotfix6.diff  G3D-v9.0 hotfix7.diff  G3D-v9.0 hotfix8.diff  G3D-v9.0 hotfix9.diff  Makefile  (+7 more)
dep/gsoap/: CMakeLists.txt  CMakeLists_BACKUP_1859.txt  Makefile  cmake_install.cmake  gsoap.stub  httpget.c  httpget.cpp  httpget.h  httppost.c  httppost.cpp  httppost.h  soapC.cpp  soapH.h  (+7 more)
doc/: AuctionHouseBot.txt  COMPILATION_HELP.TXT  CharacterDBCleanup.txt  Doxyfile.in  EventAI.txt  FileHeaders.txt  HowToScript.txt  LoggingHOWTO.txt  Makefile.am  TextTables.txt  UnixInstall.txt  wine_warden.txt
modules/: CMakeLists.txt  ModulesLoader.cpp.in.cmake  ModulesPCH.h  ModulesScriptLoader.h  create_module.sh  how_to_make_a_module.md
sql/: 2015_11_01_01_world.sql  2017_05_21_9999_world.sql  6676_world_creature_classlevelstats.sql  CMakeLists.txt  ChangeNPC.sql  Makefile.am  TDB(rus)[by_Vitasic].rar  TeleporterNPC.sql  TriniChat2.sql  Wintergrasp_world.sql  ai_playerbot_guild_names.sql  anticheat.sql  anticheat_ban.sql  anticheat_world.sql  arena_top_team.sql  auth_script.sql  character.anticheat.sql  character_item_instance.sql  characters.sql  characters_ai_playerbot.sql  characters_ai_playerbot_guild_names.sql  characters_ai_playerbot_speech.sql  characters_auctionhousebot.sql  characters_script.sql  create_mysql.sql  drop_mysql.sql  fake_items.sql  gary_RubySanctum.sql  gary_characters.sql  gary_custom.sql  gary_world.sql  gc102.sql  gc104.sql  gc105.sql  gc108.sql  gc109.sql  gc112.sql  gc115.sql  gc116.sql  gc118.sql  (+94 more)
src/: CMakeLists.txt  Makefile  Makefile.am  cmake_install.cmake
tests/: CMakeLists.txt  DummyData.cpp  DummyData.h  main.cpp  tc_catch2.h
(+53178 files in other folders)
