# Copyright (C) 2005-2008 MaNGOS <http://www.mangosproject.org/>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

## Process this file with automake to produce Makefile.in

## Sub-directories to parse
SUBDIRS = dep doc sql src

## Additional files to include when running 'make dist'
# Win32 project workspace for Visual Studio .NET 2003
EXTRA_DIST = \
	win/mangosdVC71.sln \
	win/VC71/framework.vcproj \
	win/VC71/game.vcproj \
	win/VC71/TrinityCore.vcproj \
	win/VC71/TrinityRealm.vcproj \
	win/VC71/shared.vcproj \
	win/VC71/zlib.vcproj \
	win/VC71/g3dlite.vcproj \
	win/VC71/zthread.vcproj

# Win32 project workspace for Visual Studio .NET 2005
EXTRA_DIST += \
	win/mangosdVC80.sln \
	win/VC80/framework.vcproj \
	win/VC80/game.vcproj \
	win/VC80/TrinityCore.vcproj \
	win/VC80/TrinityRealm.vcproj \
	win/VC80/shared.vcproj \
	win/VC80/zlib.vcproj \
	win/VC80/g3dlite.vcproj \
	win/VC80/zthread.vcproj

# Win32 project workspace for Visual Studio .NET 2008
EXTRA_DIST += \
	win/mangosdVC90.sln \
	win/VC90/framework.vcproj \
	win/VC90/game.vcproj \
	win/VC90/TrinityCore.vcproj \
	win/VC90/TrinityRealm.vcproj \
	win/VC90/shared.vcproj \
	win/VC90/zlib.vcproj \
	win/VC90/g3dlite.vcproj \
	win/VC90/zthread.vcproj

